###### TWE 5.1-3 RELEASED ######
2015-07-27 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - implemented i18n variable support
      - supported insertion of system variable name/description/translation and process variable name/description when defining XPDL string or email subject/content

2015-07-15 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - Added additional constants for i18n support

2015-06-08 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - Improved support to TXWToolAgent

2015-06-03 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - BeanShell and JavaScript tool agent are now allowed to use any process variable

2015-06-02 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - BeanShell and JavaScript tool agent are now allowed to have FormalParameter "Script" which is used to define script to execute in the case extended attributes "AppName" or "Script" are not defined

2015-05-27 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - supported new (I18n related) extended attributes: 
         * I18N_XPDL_FOLDER_NAME (Package level), 
         * I18N_PROCESS_DEFINITION_FILE_NAME (WorkflowProcess level), 
         * I18N_NAME_TRANSLATION_KEY and I18N_DESCRIPTION_TRANSLATION_KEY (Package, WorkflowProcess, Activity and DataField level)
      - supported new variable i18n_lang_code which is now represented as Package/Workflow process attribute
      - some changes in SharkPackageValidator API method signatures
      
2015-05-24 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - supported changes in SOAPToolAgent
      - supported new TXWToolAgent

2015-05-22 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
   	- supported changes in SOAPToolAgent

2015-05-19 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
   	- changed names of some constants

2015-05-09 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - Supported new activity extended attribute "FORM_PAGE_URL