@@ -1,4 +1,8 @@
 ###### TWE 5.1-3 RELEASED ######
+2015-07-31 Sasa Bojanic <sasaboy@together.at>
+   # Shark mode:
+      - allowing i18n variables to be used when creating variables' InitialValue expression
+      
 2015-07-27 Sasa Bojanic <sasaboy@together.at>
    # Shark mode:
       - implemented i18n variable support
